# wtts

./: .gitignore  CMakeLists.txt
data/xml/: dataStorage.xml
include/wtts/: dataParser.hpp  employee.hpp  employeeSystem.hpp  employeeSystemFactory.hpp  logInfo.hpp  xmlParser.hpp
src/: CMakeLists.txt  logInfo.cpp  main.cpp
src/dataParser/: dataParser.cpp  internals.cpp  internals.hpp  xmlParser.cpp
src/employeeSystem/: employeeSystem.cpp  factory.cpp
